--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "@noble/post-quantum": "^0.4.0"
+    "@noble/post-quantum": "^0.4.0",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.6.3",
